Fixed collapsed table in Chrome.
The .content-table class has been modified to expand properly in
Firefox and Chrome.

Ticket #1450

--- a/install/ui/ipa.css
+++ b/install/ui/ipa.css
@@ -583,11 +583,9 @@ div.tabs {
 /* ---- Search Facet ---- */
 
 .content-table {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .content-table tbody {
